[package]
name = "fletcher"
version = "0.1.0"
authors = ["Joseph Angelo <b.j.angelo@gmail.com>"]
description = "A dependency free implementation of the Fletcher's checksum algorithm"
repository = "https://github.com/jbangelo/fletcher"
documentation = "https://docs.rs/fletcher/"
readme = "README.md"
keywords = ["fletcher", "checksum"]
categories = ["algorithms"]
license = "MIT"

[badges]
travis-ci = { repository = "jbangelo/fletcher", branch = "master" }

[dependencies]

[dev-dependencies]
byteorder = "^1.3"
