[package]
name = "fletcher"
version = "1.0.0"
authors = ["Joseph Angelo <b.j.angelo@gmail.com>"]
description = "A dependency free implementation of the Fletcher's checksum algorithm"
repository = "https://github.com/jbangelo/fletcher"
documentation = "https://docs.rs/fletcher/"
readme = "README.md"
keywords = ["fletcher", "checksum"]
categories = ["algorithms", "no-std"]
license = "MIT"

[dependencies]

[dev-dependencies]
byteorder = "^1.3"
quickcheck = "^1"
